Fix scrollbar color
The color has been updated to the new corporate color.

--- a/src/utilities/_base.scss
+++ b/src/utilities/_base.scss
@@ -114,7 +114,7 @@
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #ff8910;
+  background-color: $darkblue;
 }
 
 // Generic
